@@ -106,6 +106,7 @@ int mqtt3_handle_connect(mqtt3_context *context)
 int mqtt3_handle_disconnect(mqtt3_context *context)
 {
 	mqtt3_log_printf(MQTT3_LOG_DEBUG, "Received DISCONNECT from %s", context->id);
+	context->disconnecting = true;
 	return mqtt3_socket_close(context);
 }
 
